# ginkgo

./: .gitignore  CMakeLists.txt
benchmark/preconditioner/: preconditioner.cpp
benchmark/solver/: solver_common.hpp
benchmark/sparse_blas/: operations.cpp  sparse_blas.cpp
benchmark/utils/: general.hpp  general_matrix.hpp  preconditioners.hpp  process_results.py  sparse_mtx_visualize.py
cmake/: GinkgoConfig.cmake.in  install_helpers.cmake
common/: CMakeLists.txt
core/: CMakeLists.txt
core/base/: combination.cpp  composition.cpp  memory_space.cpp  perturbation.cpp
core/components/: disjoint_sets.hpp
core/device_hooks/: common_kernels.inc.cpp
core/distributed/: block_approx.cpp  coarse_gen.cpp  errors.cpp  helpers.hpp  matrix.cpp  matrix_kernels.hpp  partition.cpp  vector.cpp  vector_kernels.hpp
core/factorization/: factorization_kernels.hpp  glu.cpp  ic.cpp  ilu.cpp  par_ic.cpp  par_ict.cpp  par_ilu.cpp  par_ilut.cpp
core/matrix/: block_approx.cpp  block_approx_kernels.hpp  csr.cpp  csr_kernels.hpp  dense.cpp  dense_kernels.hpp  ell.cpp  fbcsr.cpp  hybrid.cpp  sellp.cpp  sub_matrix.cpp  sub_matrix_kernels.hpp
core/preconditioner/: gauss_seidel.cpp  gauss_seidel_kernels.hpp  isai.cpp  jacobi.cpp  ras.cpp  ras_kernels.hpp  sparse_display.hpp
core/reorder/: hbmc.cpp
core/solver/: bicg.cpp  (+9 more)
cuda/: CMakeLists.txt
dpcpp/: CMakeLists.txt
examples/: CMakeLists.txt
examples/gauss-seidel-visualize/: CMakeLists.txt  build.sh  gauss-seidel-visualize.cpp
hip/: CMakeLists.txt
omp/: CMakeLists.txt
reference/: CMakeLists.txt
test/: CMakeLists.txt
(+181 files in other folders)
